--- a/.devcontainer/config
+++ b/.devcontainer/config
@@ -1,9 +1,9 @@
 # SnowSQL config
 
 [connections.dev]
-accountname = myaccount
-username = myusername
-password = mypassword
+accountname = UAB23914
+username = RAMANA
+password = Ramana@554439
 rolename = HOL_ROLE
 warehousename = HOL_WH
 dbname = HOL_DB
